GARPDev-salesforce/eclipse/GARPDev/src/objects/Exam_Attempt__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Commitment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up to the candidate&apos;s program contract record.</description>
        <label>Candidate Commitment</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Exam Registrations</relationshipLabel>
        <relationshipName>Exam_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate_Requirement__c</fullName>
        <description>Links this exam attempt to the Program Requirement that it satisfies.</description>
        <inlineHelpText>Links this exam attempt to the Program Requirement that it satisfies.</inlineHelpText>
        <label>Candidate Requirement</label>
        <referenceTo>Candidate_Requirement__c</referenceTo>
        <relationshipLabel>Exam Registrations</relationshipLabel>
        <relationshipName>Exam_Registrations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exam_Site__c</fullName>
        <label>Exam Site</label>
        <referenceTo>Exam_Sites__c</referenceTo>
        <relationshipName>Exam_Attempts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MemberExamAttempt__c</fullName>
        <formula>Member__c + &apos;^&apos; + Section__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MemberExamAttempt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Exam_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quintile__c</fullName>
        <label>Quintile</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipName>Exam_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seat_No__c</fullName>
        <label>Seat No:</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <formula>text(Exam_Site__r.Exam__r.Exam__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <description>Indicates what session exam is offered in.</description>
        <formula>IF ( text(Exam_Site__r.Exam__r.Exam__c) == &apos;FRM Part 1&apos;, &apos;AM&apos;,
  IF ( text(Exam_Site__r.Exam__r.Exam__c) == &apos;FRM Part 2&apos;, &apos;PM&apos;, &apos;Both&apos; ))</formula>
        <inlineHelpText>This field is set before update by room trigger</inlineHelpText>
        <label>Session</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <formula>Exam_Site__r.Site__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <label>Unique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <formula>Room__r.Venue__r.Name</formula>
        <label>Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasViolation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasViolation</label>
        <type>Checkbox</type>
    </fields>
    <label>Exam Registrations</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Exam_Site__c</columns>
        <columns>NAME</columns>
        <columns>Member__c</columns>
        <columns>Room__c</columns>
        <columns>Section__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Section__c</field>
            <operation>equals</operation>
            <value>FRM Part 2,FRM Part 1,ERP</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Candidate Exam Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exam Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>